--- a/.env.example
+++ b/.env.example
@@ -1,7 +1,8 @@
 PORT=3000
 JWT_ACCESS_SECRET=this-is-access
 JWT_REFRESH_SECRET=this-is-refresh
-
+JWT_ACCESS_EXPIRES=15m
+JWT_REFRESH_EXPIRES=1d
 
 #CONFIG DATABASE
 POSTGRES_DB=article
